FIX: Sticky navigation bar on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,5 @@ div {
   display: flex;
   flex-direction: column;
   position: relative;
+  margin: 0;
 }
