--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,5 +1,5 @@
 .nav {
-  @apply justify-evenly w-full h-min p-4 mr-0 z-0 list-none sticky bottom-0 rounded-b-lg bg-white left-0 border border-blue-400;
+  @apply justify-between absolute w-full p-5 m-0 z-10 list-none bottom-0 rounded-b-lg bg-white left-0 border border-blue-400;
 }
 li {
   font-size: 30px;
