--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ code {
     @apply mb-2 text-blue-500 dark:text-white flex flex-col;
   }
   .container {
-    @apply flex text-center rounded-lg p-2 bg-blue-100 w-48 h-min;
+    @apply flex text-center rounded-lg p-2 bg-blue-100 w-48;
   }
   .btn {
     @apply bg-white shadow-md flex justify-center border border-blue-400 hover:text-white hover:bg-blue-500;
